--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.29.0",
+    "better-sqlite3": "^12.6.2",
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
     "leaflet": "^1.9.4",
@@ -25,9 +26,6 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0"
-  },
-  "optionalDependencies": {
-    "better-sqlite3": "^12.4.1"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.14",
